--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -5,20 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    card_view:cardCornerRadius="10dp"
+    card_view:cardCornerRadius="5dp"
     card_view:cardUseCompatPadding="true"
+    card_view:contentPadding="10dp"
     >
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv_recipe_name"
+            style="@style/Base.TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:padding="10dp"
-            android:text="Hello there!"
-            style="@style/Base.TextAppearance.AppCompat.Title"
             />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
