--- a/app/src/main/res/layout/fragment_recipe_master_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_master_list.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -26,8 +26,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_ingredients_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none" />
+            android:layout_height="match_parent" />
 
         <TextView
             style="@style/RecipeMasterListFragmentTitle"
