--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="recipe_column_width">200dp</dimen>
     <dimen name="recipe_detail_title">25sp</dimen>
     <dimen name="fragment_recipe_master_list_margin_vertical">10dp</dimen>
+    <dimen name="list_ingredient_item_ingredient_item_margin_right">15dp</dimen>
+    <dimen name="list_ingredient_item_ingredient_item_margin_bottom">10dp</dimen>
 </resources>
