Implement RecyclerView for RecipesList

--- a/app/src/main/res/layout/fragment_recipe_master_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_master_list.xml
@@ -26,7 +26,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_ingredients_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
         <TextView
             style="@style/RecipeMasterListFragmentTitle"
@@ -37,7 +37,6 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_recipe_steps_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
