--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="fragment_recipe_master_list_margin_vertical">10dp</dimen>
     <dimen name="list_ingredient_item_ingredient_item_margin_right">15dp</dimen>
     <dimen name="list_ingredient_item_ingredient_item_margin_bottom">10dp</dimen>
+    <dimen name="list_recipe_step_item_recipe_step_padding">17dp</dimen>
+    <dimen name="list_recipe_step_item_recipe_step_short_description_size">20sp</dimen>
 </resources>
