--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -3,4 +3,4 @@
     android:id="@+id/recipe_master_list_fragment"
     android:name="com.example.android.bakingapp.ui.RecipeMasterListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></fragment>
+    android:layout_height="match_parent" />
