--- a/app/src/main/res/layout/activity_recipe_step_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_step_detail.xml
@@ -9,11 +9,14 @@
         android:id="@+id/recipe_step_detail_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:padding="@dimen/fragment_recipe_step_detail_layout_padding">
 
         <FrameLayout
             android:id="@+id/recipe_step_detail_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside" />
     </LinearLayout>
 </ScrollView>
