--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="list_recipe_step_item_recipe_step_padding">17dp</dimen>
     <dimen name="list_recipe_step_item_recipe_step_short_description_size">20sp</dimen>
     <dimen name="fragment_recipe_step_detail_recipe_step_description_margin_top">20dp</dimen>
+    <dimen name="fragment_recipe_step_detail_layout_padding">17dp</dimen>
 </resources>
