--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,11 @@
     <dimen name="fragment_recipe_step_detail_recipe_step_description_margin_top">20dp</dimen>
     <dimen name="fragment_recipe_step_detail_layout_padding">17dp</dimen>
     <dimen name="recipe_step_video_height">280dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
