Add progress bar when loading and error message

--- a/app/src/main/res/layout/activity_recipes_list.xml
+++ b/app/src/main/res/layout/activity_recipes_list.xml
@@ -14,4 +14,18 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp"
         />
+
+    <TextView
+        android:id="@+id/tv_recipes_list_error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 </FrameLayout>
