--- a/app/src/main/res/layout/fragment_recipe_master_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_master_list.xml
@@ -14,8 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:contentDescription="@string/recipe_image_preview"
-            android:src="@drawable/image_placeholder" />
+            android:contentDescription="@string/recipe_image_preview" />
 
         <TextView
             style="@style/RecipeMasterListFragmentTitle"
