--- a/app/src/main/res/layout/fragment_recipe_master_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_master_list.xml
@@ -1,41 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <ImageView
-            android:id="@+id/iv_recipe_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/recipe_image_preview" />
-
-        <TextView
-            style="@style/RecipeMasterListFragmentTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ingredients_title" />
-
+    android:layout_height="match_parent"
+    android:orientation="vertical">
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_ingredients_list"
+            android:id="@+id/rv_items_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            style="@style/RecipeMasterListFragmentTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/recipe_steps_title" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_recipe_steps_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-</ScrollView>
+            android:layout_height="match_parent" />
+</LinearLayout>
