--- a/app/src/main/res/layout/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_step_detail.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <FrameLayout
+            android:id="@+id/fl_video_player_container"
             android:layout_width="match_parent"
             android:layout_height="@dimen/recipe_step_video_height">
 
@@ -32,6 +32,27 @@
             style="@style/RecipeStepDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/fl_video_player_container"
             android:layout_marginTop="@dimen/fragment_recipe_step_detail_recipe_step_description_margin_top" />
-    </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_previous_step"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tv_recipe_step_description"
+            android:layout_marginTop="@dimen/fragment_recipe_step_detail_navigation_button_margin_top"
+            android:text="@string/fragment_recipe_step_detail_previous_button" />
+
+        <Button
+            android:id="@+id/btn_next_step"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv_recipe_step_description"
+            android:layout_marginTop="@dimen/fragment_recipe_step_detail_navigation_button_margin_top"
+            android:text="@string/fragment_recipe_step_detail_next_button" />
+    </RelativeLayout>
 </ScrollView>
