--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fragment_recipe_step_detail_navigation_button_margin_top">20dp</dimen>
 </resources>
