--- a/app/src/main/res/layout/activity_recipe_step_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_step_detail.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipe_step_detail_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:orientation="vertical"
     tools:context=".ui.RecipeStepDetailActivity">
 
-    <LinearLayout
-        android:id="@+id/recipe_step_detail_linear_layout"
+    <FrameLayout
+        android:id="@+id/recipe_step_detail_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:padding="@dimen/fragment_recipe_step_detail_layout_padding">
-
-        <FrameLayout
-            android:id="@+id/recipe_step_detail_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerInside" />
-    </LinearLayout>
-</ScrollView>
+        android:layout_height="match_parent"
+        android:scaleType="centerInside" />
+</LinearLayout>
