--- a/app/src/main/res/layout/activity_recipes_list.xml
+++ b/app/src/main/res/layout/activity_recipes_list.xml
@@ -4,16 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <GridView
-        android:id="@+id/gv_recipes"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_recipes_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="@dimen/recipe_column_width"
-        android:horizontalSpacing="10dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp"
-        />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/tv_recipes_list_error_message"
