Show video thumbnail on the SimpleExoplayerView

--- a/app/src/main/res/layout-normal-land/fragment_recipe_step_detail.xml
+++ b/app/src/main/res/layout-normal-land/fragment_recipe_step_detail.xml
@@ -10,6 +10,13 @@
         android:layout_height="match_parent"
         app:resize_mode="fill" />
 
+    <ImageView
+        android:id="@+id/iv_video_thumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:visibility="invisible" />
+
     <TextView
         android:id="@+id/tv_video_error_message"
         android:layout_width="wrap_content"
